fixes gap between title and body on facebook

--- a/src/btm.css
+++ b/src/btm.css
@@ -58,7 +58,8 @@
 
 .btm-popover-body {
   padding: 0 1em;
-  font-family: 'Helvetica Neue', sans-serif; }
+  font-family: 'Helvetica Neue', sans-serif;
+  display: inline-block; }
 
 .btm-result {
   color: black;
@@ -78,7 +79,8 @@
   font-weight: normal;
   line-height: 1.42857143;
   text-align: left;
-  text-align: start; }
+  text-align: start;
+  margin: 0 0 1em 0; }
 
 .btm-loading {
   display: flex;
@@ -638,7 +640,7 @@ tbody.collapse.in {
 
 .btm-article-popover {
   position: fixed;
-  top: 3em; }
+  top: 170px; }
 
 .btm-article-popover.right {
   right: 1em; }
