--- a/stylesheets/btm-article.scss
+++ b/stylesheets/btm-article.scss
@@ -1,6 +1,6 @@
 .btm-article-popover {
   position: fixed;
-  top: 3em;
+  top: 170px;
 }
 .btm-article-popover.right {
   right: 1em;
